@@ -14,6 +14,9 @@
     src="/static/js/oneoffcast/user.js"></script>
 
   <script type="text/javascript">
+    var initial_queue = {{ queue }};
+    var initial_subscriptions = {{ subscriptions }};
+
     dojo.event.connect(window, "onload", user_onload);
   </script>
 
